[gd_scene load_steps=19 format=3 uid="uid://cjunrr6nv2rhr"]

[ext_resource type="Script" uid="uid://dca2v3ej3y82n" path="res://game/weapons/other/teleporter/teleporter.gd" id="1_cvmrr"]
[ext_resource type="Texture2D" uid="uid://dj31vxe6j5ys0" path="res://game/weapons/other/teleporter/base.png" id="2_q2iwe"]
[ext_resource type="Texture2D" uid="uid://cl1glbvts1odx" path="res://game/weapons/other/teleporter/button0.png" id="3_skiv7"]
[ext_resource type="Material" uid="uid://b8111w5tokcit" path="res://game/player/ui/solid_color.tres" id="3_vrh83"]
[ext_resource type="Texture2D" uid="uid://8i36qrobry1d" path="res://game/weapons/other/teleporter/button1.png" id="4_crsid"]
[ext_resource type="Texture2D" uid="uid://bm7k7msd2ias0" path="res://game/weapons/other/teleporter/button2.png" id="5_vrh83"]
[ext_resource type="AudioStream" uid="uid://b7h86apen7cxs" path="res://game/weapons/other/teleporter/activation.wav" id="7_6ye5t"]
[ext_resource type="Texture2D" uid="uid://beh735ahnn4gt" path="res://game/weapons/other/teleporter/aim.png" id="8_6ye5t"]
[ext_resource type="AudioStream" uid="uid://b2ynpfbj32tyc" path="res://game/weapons/other/teleporter/teleport.wav" id="8_rmo4a"]

[sub_resource type="Animation" id="Animation_6ye5t"]
resource_name = "Equip"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Base:z_index")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Base:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-28, -43), Vector2(74, -31), Vector2(4, 4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Base:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-2.10191, -0.287773, 0.435151]
}

[sub_resource type="Animation" id="Animation_gmsx8"]
resource_name = "Fail"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Base:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.25, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(4, 4), Vector2(2, 4), Vector2(6, 4), Vector2(2, 4), Vector2(6, 4), Vector2(4, 4)]
}

[sub_resource type="Animation" id="Animation_cjulr"]
resource_name = "PostUse"
length = 0.7
step = 0.05
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_rmo4a")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Base:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.25, 0.35, 0.45, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(4, 4), Vector2(2, 4), Vector2(6, 4), Vector2(2, 4), Vector2(6, 4), Vector2(2, 4), Vector2(6, 4), Vector2(4, 4)]
}

[sub_resource type="Animation" id="Animation_eqdtl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Base:z_index")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Base:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Base:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.435151]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Base/Buttons/Button0:instance_shader_parameters/power")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Base/Buttons/Button1:instance_shader_parameters/power")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Base/Buttons/Button2:instance_shader_parameters/power")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_rmo4a"]
resource_name = "Use0"
length = 0.6
step = 0.05
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_6ye5t")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Base/Buttons/Button0:instance_shader_parameters/power")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.5, 0.5, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Base/Buttons/Button1:instance_shader_parameters/power")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.5, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Base:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 4)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Base:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.435151]
}

[sub_resource type="Animation" id="Animation_vrh83"]
resource_name = "Use1"
length = 0.6
step = 0.05
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_6ye5t")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Base/Buttons/Button2:instance_shader_parameters/power")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.5, 0.5, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Base/Buttons/Button0:instance_shader_parameters/power")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.5, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Base:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 4)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Base:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.435151]
}

[sub_resource type="Animation" id="Animation_1pom7"]
resource_name = "Use2"
length = 0.6
step = 0.05
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_6ye5t")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Base/Buttons/Button1:instance_shader_parameters/power")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.5, 0.5, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Base/Buttons/Button2:instance_shader_parameters/power")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.5, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Base:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 4)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Base:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.435151]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eqdtl"]
_data = {
&"Equip": SubResource("Animation_6ye5t"),
&"Fail": SubResource("Animation_gmsx8"),
&"PostUse": SubResource("Animation_cjulr"),
&"RESET": SubResource("Animation_eqdtl"),
&"Use0": SubResource("Animation_rmo4a"),
&"Use1": SubResource("Animation_vrh83"),
&"Use2": SubResource("Animation_1pom7")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_1pom7"]
radius = 76.0

[node name="Teleporter" type="Node2D"]
script = ExtResource("1_cvmrr")
ammo_per_load = 0
ammo_total = 2
speed_multiplier_when_current = 0.97
aim_camera_distance = 200.0
shoot_on_joystick_release = true
metadata/_custom_type_script = "uid://btu7i28e5iysh"

[node name="Base" type="Sprite2D" parent="."]
position = Vector2(4, 4)
rotation = 0.435151
texture = ExtResource("2_q2iwe")
offset = Vector2(0, -12)

[node name="Buttons" type="Node2D" parent="Base"]
show_behind_parent = true
position = Vector2(0, -12)

[node name="Button0" type="Sprite2D" parent="Base/Buttons"]
material = ExtResource("3_vrh83")
instance_shader_parameters/power = 0.0
texture = ExtResource("3_skiv7")
offset = Vector2(-8, 0)
region_enabled = true
region_rect = Rect2(0, 24, 32, 32)

[node name="Button1" type="Sprite2D" parent="Base/Buttons"]
material = ExtResource("3_vrh83")
instance_shader_parameters/power = 0.0
texture = ExtResource("4_crsid")
offset = Vector2(8, 0)
region_enabled = true
region_rect = Rect2(16, 24, 32, 32)

[node name="Button2" type="Sprite2D" parent="Base/Buttons"]
material = ExtResource("3_vrh83")
instance_shader_parameters/power = 0.0
texture = ExtResource("5_vrh83")
offset = Vector2(0, 24)
region_enabled = true
region_rect = Rect2(0, 48, 48, 32)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_eqdtl")
}

[node name="CollisionCheck" type="ShapeCast2D" parent="."]
position = Vector2(480, 0)
enabled = false
shape = SubResource("CircleShape2D_1pom7")
target_position = Vector2(0, 0)
max_results = 1
collision_mask = 19

[node name="BorderCheck" type="RayCast2D" parent="."]
top_level = true
target_position = Vector2(0, 0)
collision_mask = 8
hit_from_inside = true

[node name="CooldownTimer" type="Timer" parent="."]
process_mode = 1
process_callback = 0
wait_time = 15.0
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
max_distance = 2400.0
bus = &"SFX"

[node name="Aim" type="Sprite2D" parent="."]
visible = false
top_level = true
z_index = 10
texture = ExtResource("8_6ye5t")

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
